--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ button {
 
   <div class="col-6 col-md-3">
   <div class="image-card position-relative">
-    <img src="WED1.jpg" class="img-fluid" alt="couple 1">
+    <img src="wed1.jpg" class="img-fluid" alt="couple 1">
 
     <div class="review-box">
       <p class="mb-1 fw-bold text-white"><i class="fa-regular fa-heart"></i>
@@ -813,7 +813,7 @@ button {
 
       <div class="col-6 col-md-3">
   <div class="image-card position-relative">
-    <img src="WED2.jpg" class="img-fluid" alt="couple 1">
+    <img src="wed2.jpg" class="img-fluid" alt="couple 1">
 
     <div class="review-box">
       <p class="mb-1 fw-bold text-white"><i class="fa-regular fa-heart"></i>
@@ -825,7 +825,7 @@ button {
 
      <div class="col-6 col-md-3">
   <div class="image-card position-relative">
-    <img src="WED3.jpg" class="img-fluid" alt="couple 1">
+    <img src="wed3.jpg" class="img-fluid" alt="couple 1">
 
     <div class="review-box">
       <p class="mb-1 fw-bold text-white"><i class="fa-regular fa-heart"></i>
@@ -837,7 +837,9 @@ button {
 
       <div class="col-6 col-md-3">
   <div class="image-card position-relative">
-    <img src="WED4.jpg" class="img-fluid" alt="couple 1">
+    <img src="wed
+		
+		4.jpg" class="img-fluid" alt="couple 1">
 
     <div class="review-box">
       <p class="mb-1 fw-bold text-white"><i class="fa-regular fa-heart"></i>
