--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ button {
   <div class="container">
     <div class="video-box">
       <video width="100%" autoplay muted controls >
-        <source src="modeling shoot.mp4" type="video/mp4">
+        <source src="modelings.mp4" type="video/mp4">
       </video>
     </div>
   </div>
