--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ button {
   <div class="container">
     <div class="video-box">
       <video width="100%" autoplay muted controls >
-        <source src="Birthday shoot.mp4" type="video/mp4">
+        <source src="birthday shoot.mp4" type="video/mp4">
       </video>
     </div>
   </div>
